Minor fixes to multiselect alignment of X icons

--- a/components/Referencer/MultiSelect.module.css
+++ b/components/Referencer/MultiSelect.module.css
@@ -1,5 +1,8 @@
 .multiSelect {
   position: relative;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .multiSelectControl {
@@ -37,6 +40,7 @@
 .multiSelectTagRemove {
   margin-left: 0.25rem;
   cursor: pointer;
+  display: flex;
 }
 
 .multiSelectIcon {
@@ -54,6 +58,7 @@
 .multiSelectMenu {
   position: absolute;
   margin-top: 0.25rem;
+  top: 100%;
   left: 0;
   right: 0;
   border-radius: 0.375rem;
